--- a/apollo/frontend/templates/frontend/nu_submission_edit.html
+++ b/apollo/frontend/templates/frontend/nu_submission_edit.html
@@ -146,7 +146,7 @@ TODO: insert last used identity here
 </tbody>
 </table>
 {% else %}
-<table class="table table-bordered table-striped table-hover" style="margin-bottom:5.5em;">
+<table class="table table-bordered table-striped table-hover">
   <tbody>
     <tr>
       <td colspan="2">&nbsp;</td>
@@ -195,7 +195,7 @@ TODO: insert last used identity here
 {%- if form.form_type == 'CHECKLIST' -%}
 <div class="row">
   <div class="col-md-12">
-    <table class="table table-bordered" id="comments" style="margin-bottom:5.7em;">
+    <table class="table table-bordered" id="comments">
     {% for comment in comments %}
       <tr>
         <td>
