--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -117,8 +117,10 @@
     </div>
     <div id="footer">
         <div class="container">
-          <footer>{% block footer %}{% endblock %}
-            <p style="padding-top:18px;">Copyright © 2014 &middot; Apollo &middot; version 2.1</p>
+          <footer>
+          {%- block footer -%}
+            <p style="padding-top:18px;">Apollo &mdash; v2.1.1</p>
+          {%- endblock -%}
           </footer>
         </div>
     </div>
