--- a/apollo/frontend/static/css/apollo.css
+++ b/apollo/frontend/static/css/apollo.css
@@ -7197,6 +7197,9 @@ table .header-fixed {
 .qtipmodal-ie6fix{
 	position: absolute !important;
 }
+.navbar-nav > li > a{padding-top: 15px; padding-bottom: 15px;}
+.navbrand-container {position: relative; min-height:50px; padding-top:18px;}
+.navbrand-logo{bottom: 0; margin: auto; position: absolute; top: 10%;}
 html {
   position: relative;
   min-height: 100%;
