--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -27,7 +27,11 @@
     <div class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand navbrand-container" href="{{ url_for('dashboard.index') }}">{% if g.deployment.logo %}<img src="{{ g.deployment.logo }}" title="Apollo" class="navbrand-logo">{% else %}Apollo{% endif %}</a>
+          <a class="navbar-brand navbrand-container" href="{{ url_for('dashboard.index') }}">
+            {% if g.deployment.logo %}
+            <img src="{{ g.deployment.logo }}" title="Apollo" class="navbrand-logo">
+            {% else %}Apollo{% endif %}
+          </a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
