--- a/apollo/frontend/templates/frontend/macros/analysis_breadcrumb.html
+++ b/apollo/frontend/templates/frontend/macros/analysis_breadcrumb.html
@@ -11,6 +11,8 @@
         {% set linkto = url_for('analysis.process_analysis_with_location', form_id=breadcrumb_data.form.pk, location_id=location.pk) %}
       {% endif %}
     <li><a href="{{ linkto }}">{{ location.name }}</a> &middot; <em class="locationtype">{{ location.location_type }}</em><span class="divider"></span></li>
+    {% elif breadcrumb_data.analysis_type == 'results' %}
+    <li><a href="{{ url_for('analysis.results_analysis_with_location', form_id=breadcrumb_data.form.pk, location_id=location.pk) }}">{{ location.name }}</a> &middot; <em class="locationtype">{{ location.location_type }}</em><span class="divider"></span></li>
     {% endif %}
     {% endif %}
 {% endfor %}
