--- a/apollo/frontend/templates/frontend/message_list.html
+++ b/apollo/frontend/templates/frontend/message_list.html
@@ -26,7 +26,7 @@
           <button type="submit" class="btn btn-warning btn-sm"><i class="glyphicon glyphicon-search"></i> {% trans %}Search{% endtrans %}</button>
         </div>
         <div class="form-group">
-          <a class="btn btn-default form-reset btn-sm">{% trans %}Clear{% endtrans %}</a>
+          <a class="btn btn-default form-reset btn-sm"><i class="glyphicon glyphicon-refresh"></i> {% trans %}Reset{% endtrans %}</a>
         </div>
       </form>
     </div>
