--- a/apollo/frontend/templates/frontend/macros/locations_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/locations_list_filter.html
@@ -10,7 +10,7 @@
 	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
 </div>
 <div class="form-group">
-	<a class="btn btn-default btn-sm" id="filter_reset">Clear</a>
+	<a class="btn btn-default btn-sm" id="filter_reset"><i class="glyphicon glyphicon-refresh"></i> Reset</a>
 </div>
 </form>
 {% endmacro %}
