--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -25,7 +25,7 @@
 	<button class="btn btn-warning btn-sm btn-custom" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
 </div>
 <div class="form-group">
-    <a class="btn btn-default btn-sm" id="filter_reset">{% trans %}Clear{% endtrans %}</a>
+    <a class="btn btn-default btn-sm" id="filter_reset"><i class="glyphicon glyphicon-refresh"></i> {% trans %}Reset{% endtrans %}</a>
 </div>
 </form>
 {% endmacro %}
