--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -74,10 +74,10 @@
               {%- endif -%}
               {%- if current_menu.submenu('results_analysis').dynamic_list -%}
               <li class="dropdown-submenu">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-list-alt"></i> {% trans %}Results{% endtrans %}</a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-stats"></i> {% trans %}Results{% endtrans %}</a>
                 <ul class="dropdown-menu">
                   {%- for form in current_menu.submenu('results_analysis').dynamic_list -%}
-                  <li><a href="{{ form.url }}"><i class="glyphicon glyphicon-list-alt"></i> {{ form.text }}</a></li>
+                  <li><a href="{{ form.url }}"><i class="glyphicon glyphicon-stats"></i> {{ form.text }}</a></li>
                   {%- endfor %}
                 </ul>
               </li>
