--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -31,7 +31,7 @@
     	<button class="btn btn-warning btn-sm" type="submit"><i class="glyphicon glyphicon-search"></i> {% trans %}Filter{% endtrans %}</button>
     </div>
     <div class="form-group">
-    	<a class="btn btn-default btn-sm" id="filter_reset"><i class="glyphicon glyphicon-refresh"></i> {% trans %}Reset{% endtrans %}</a>
+    	<a class="btn btn-default btn-sm" id="filter_reset">{% trans %}Clear{% endtrans %}</a>
     </div>
 </div>
 </form>
