--- a/apollo/frontend/templates/frontend/nu_results.html
+++ b/apollo/frontend/templates/frontend/nu_results.html
@@ -30,11 +30,11 @@
 							{%- if form.registered_voters_tag -%}
 							<th class="gray">&nbsp;</th>
 							{%- endif -%}
-							<th width="30"{% if form.registered_voters_tag and form.calculate_moe %} colspan="2"{%- endif -%} class="gray" style="text-align:center">{%- trans -%}Total votes{%- endtrans -%}</th>
-							<th width="100"{% if form.calculate_moe %} colspan="2"{%- endif -%} class="gray" style="text-align:center">{%- trans -%}Rejected ballots{%- endtrans -%}</th>
+							<th width="30"{% if form.registered_voters_tag and form.calculate_moe %} colspan="3"{%- endif -%} class="gray" style="text-align:center">{%- trans -%}Total votes{%- endtrans -%}</th>
+							<th width="100"{% if form.calculate_moe %} colspan="3"{%- endif -%} class="gray" style="text-align:center">{%- trans -%}Rejected ballots{%- endtrans -%}</th>
 							<th width="30" class="gray" style="text-align:center">{%- trans -%}Total valid{%- endtrans -%}</th>
 							{%- for party in form.party_mappings.keys() -%}
-							<th width="100"{%- if form.calculate_moe %} colspan="2"{%- endif -%} class="gray" style="text-align:center">{{ party }}</th>
+							<th width="100"{%- if form.calculate_moe %} colspan="3"{%- endif -%} class="gray" style="text-align:center">{{ party }}</th>
 							{%- endfor -%}
 						</tr>
 						<tr>
@@ -45,17 +45,20 @@
 							{%- endif -%}
 							<td class="centered" width="10%">{%- trans -%}Votes{%- endtrans -%}</td>
 							{%- if form.registered_voters_tag and form.calculate_moe -%}
-							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE{%- endtrans -%}</abbr></em></td>
+							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
+							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
 							{%- endif -%}
 							<td class="centered"><em><abbr title="{%- trans -%}Rejected ballots{%- endtrans -%}">{%- trans -%}RB{%- endtrans -%}</abbr></em></td>
 							{%- if form.calculate_moe -%}
-							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE{%- endtrans -%}</abbr></em></td>
+							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
+							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
 							{%- endif -%}
 							<td><em><abbr title="{%- trans -%}Total valid{%- endtrans -%}">{%- trans -%}TV{%- endtrans -%}</abbr></em></td>
 							{%- for party in form.party_mappings.keys() -%}
 							<td class="centered"><em>{%- trans -%}Votes{%- endtrans -%}</em></td>
 							{%- if form.calculate_moe -%}
-							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE{%- endtrans -%}</abbr></em></td>
+							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
+							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
 							{%- endif -%}
 							{%- endfor -%}
 						</tr>
@@ -69,16 +72,19 @@
 							<th class="numeric gray">{{ dataframe|all_votes_total_pct(form, form.party_mappings.values(), location.location_type, location.name, 'ALL') }}% ({{ dataframe|all_votes_total(form, form.party_mappings.values(), location.location_type, location.name, 'ALL') }})</th>
 							{%- if form.registered_voters_tag and form.calculate_moe -%}
 							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, form.party_mappings.values(), location.location_type, location.name, 'ALL') }}%</th>
+							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, form.party_mappings.values(), location.location_type, location.name, 'ALL', 258.0) }}%</th>
 							{%- endif -%}
 							<th class="numeric gray">{{ dataframe|rejected_proportion(form, location.location_type, location.name, 'ALL') }}%<br />({{ dataframe|rejected_count(form, location.location_type, location.name, 'ALL') }})</th>
                             {%- if form.calculate_moe -%}
                             <th class="numeric gray">{{ dataframe|rejected_moe(form, location.location_type, location.name, 'ALL') }}%</th>
+                            <th class="numeric gray">{{ dataframe|rejected_moe(form, location.location_type, location.name, 'ALL', 258.0) }}%</th>
                             {%- endif -%}
                             <th class="numeric gray">{{ dataframe|valid_votes_total(form.party_mappings.values(), location.location_type, location.name, 'ALL') }}</th>
                             {%- for vote in form.party_mappings.values() -%}
                             <th class="numeric gray">{{ dataframe|vote_proportion(form, form.party_mappings.values(), vote, location.location_type, location.name, 'ALL') }}%<br />({{ dataframe|vote_count(form.party_mappings.values(), vote, location.location_type, location.name, 'ALL') }})</th>
                             {%- if form.calculate_moe -%}
                             <th class="numeric gray">{{ dataframe|vote_moe(form, form.party_mappings.values(), vote, location.location_type, location.name, 'ALL') }}%</th>
+                            <th class="numeric gray">{{ dataframe|vote_moe(form, form.party_mappings.values(), vote, location.location_type, location.name, 'ALL', 258.0) }}%</th>
                             {%- endif -%}
                             {%- endfor -%}
 						</tr>
@@ -93,16 +99,19 @@
 							<th class="numeric gray">{{ dataframe|all_votes_total_pct(form, form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }}% ({{ dataframe|all_votes_total(form, form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }})</th>
 							{%- if form.registered_voters_tag and form.calculate_moe -%}
 							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }}%</th>
+							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL', 258.0) }}%</th>
 							{%- endif -%}
 							<th class="numeric gray">{{ dataframe|rejected_proportion(form, sublocation.location_type, sublocation.name, 'ALL') }}%<br />({{ dataframe|rejected_count(form, sublocation.location_type, sublocation.name, 'ALL') }})</th>
                             {%- if form.calculate_moe -%}
                             <th class="numeric gray">{{ dataframe|rejected_moe(form, sublocation.location_type, sublocation.name, 'ALL') }}%</th>
+                            <th class="numeric gray">{{ dataframe|rejected_moe(form, sublocation.location_type, sublocation.name, 'ALL', 258.0) }}%</th>
                             {%- endif -%}
                             <th class="numeric gray">{{ dataframe|valid_votes_total(form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }}</th>
                             {%- for vote in form.party_mappings.values() -%}
                             <th class="numeric gray">{{ dataframe|vote_proportion(form, form.party_mappings.values(), vote, sublocation.location_type, sublocation.name, 'ALL') }}%<br />({{ dataframe|vote_count(form.party_mappings.values(), vote, sublocation.location_type, sublocation.name, 'ALL') }})</th>
                             {%- if form.calculate_moe -%}
                             <th class="numeric gray">{{ dataframe|vote_moe(form, form.party_mappings.values(), vote, sublocation.location_type, sublocation.name, 'ALL') }}%</th>
+                            <th class="numeric gray">{{ dataframe|vote_moe(form, form.party_mappings.values(), vote, sublocation.location_type, sublocation.name, 'ALL', 258.0) }}%</th>
                             {%- endif -%}
                             {%- endfor -%}
 						</tr>
