--- a/apollo/frontend/templates/frontend/nu_results.html
+++ b/apollo/frontend/templates/frontend/nu_results.html
@@ -21,6 +21,8 @@
 			{%- for lt in location_types -%}
 			<div class="tab-pane{%- if loop.first %} active{%- endif -%}" id="tab_{{ loop.index }}">
 				{%- if form.party_mappings -%}
+                {%- set party_codes = form.party_mappings|dictsort(false, 'value')|map('last')|list() -%}
+                {%- set party_names = form.party_mappings|dictsort(false, 'value')|map('first')|list() -%}
 				<table class="table-responsive">
 					<table class="table table-bordered table-hover">
 						<tr>
@@ -33,7 +35,7 @@
 							<th width="30"{% if form.registered_voters_tag and form.calculate_moe %} colspan="3"{%- endif -%} class="gray" style="text-align:center">{%- trans -%}Total votes{%- endtrans -%}</th>
 							<th width="100"{% if form.calculate_moe %} colspan="3"{%- endif -%} class="gray" style="text-align:center">{%- trans -%}Rejected ballots{%- endtrans -%}</th>
 							<th width="30" class="gray" style="text-align:center">{%- trans -%}Total valid{%- endtrans -%}</th>
-							{%- for party in form.party_mappings.keys() -%}
+							{%- for party in party_names -%}
 							<th width="100"{%- if form.calculate_moe %} colspan="3"{%- endif -%} class="gray" style="text-align:center">{{ party }}</th>
 							{%- endfor -%}
 						</tr>
@@ -54,7 +56,7 @@
 							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 99%{%- endtrans -%}</abbr></em></td>
 							{%- endif -%}
 							<td><em><abbr title="{%- trans -%}Total valid{%- endtrans -%}">{%- trans -%}TV{%- endtrans -%}</abbr></em></td>
-							{%- for party in form.party_mappings.keys() -%}
+							{%- for party in party_names -%}
 							<td class="centered"><em>{%- trans -%}Votes{%- endtrans -%}</em></td>
 							{%- if form.calculate_moe -%}
 							<td class="centered"><em><abbr title="{%- trans -%}Margin of error{%- endtrans -%}">{%- trans -%}MoE 95%{%- endtrans -%}</abbr></em></td>
@@ -64,54 +66,54 @@
 						</tr>
 						<tr>
 							<th class="gray" style="vertical-align:middle">{{ location.name }} &middot; <span class="muted"><em>{{ location.location_type }}</em></span></th>
-							<th class="numeric gray">{{ dataframe|reported_pct(form.party_mappings.values(), location.location_type, location.name, 'ALL') }}% <br>({{ dataframe|reported(form.party_mappings.values(), location.location_type, location.name, 'ALL') }})</th>
-							<th class="numeric gray">{{ dataframe|missing_pct(form.party_mappings.values(), location.location_type, location.name, 'ALL') }}% <br>({{ dataframe|missing(form.party_mappings.values(), location.location_type, location.name, 'ALL') }})</th>
+							<th class="numeric gray">{{ dataframe|reported_pct(party_codes, location.location_type, location.name, 'ALL') }}% <br>({{ dataframe|reported(party_codes, location.location_type, location.name, 'ALL') }})</th>
+							<th class="numeric gray">{{ dataframe|missing_pct(party_codes, location.location_type, location.name, 'ALL') }}% <br>({{ dataframe|missing(party_codes, location.location_type, location.name, 'ALL') }})</th>
 							{%- if form.registered_voters_tag -%}
 							<th class="numeric gray">{{ dataframe|total_registered(form, location.location_type, location.name, 'ALL') }}</th>
 							{%- endif -%}
-							<th class="numeric gray">{{ dataframe|all_votes_total_pct(form, form.party_mappings.values(), location.location_type, location.name, 'ALL') }}% ({{ dataframe|all_votes_total(form, form.party_mappings.values(), location.location_type, location.name, 'ALL') }})</th>
+							<th class="numeric gray">{{ dataframe|all_votes_total_pct(form, party_codes, location.location_type, location.name, 'ALL') }}% ({{ dataframe|all_votes_total(form, party_codes, location.location_type, location.name, 'ALL') }})</th>
 							{%- if form.registered_voters_tag and form.calculate_moe -%}
-							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, form.party_mappings.values(), location.location_type, location.name, 'ALL') }}%</th>
-							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, form.party_mappings.values(), location.location_type, location.name, 'ALL', 258.0) }}%</th>
+							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, party_codes, location.location_type, location.name, 'ALL') }}%</th>
+							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, party_codes, location.location_type, location.name, 'ALL', 258.0) }}%</th>
 							{%- endif -%}
 							<th class="numeric gray">{{ dataframe|rejected_proportion(form, location.location_type, location.name, 'ALL') }}%<br />({{ dataframe|rejected_count(form, location.location_type, location.name, 'ALL') }})</th>
                             {%- if form.calculate_moe -%}
                             <th class="numeric gray">{{ dataframe|rejected_moe(form, location.location_type, location.name, 'ALL') }}%</th>
                             <th class="numeric gray">{{ dataframe|rejected_moe(form, location.location_type, location.name, 'ALL', 258.0) }}%</th>
                             {%- endif -%}
-                            <th class="numeric gray">{{ dataframe|valid_votes_total(form.party_mappings.values(), location.location_type, location.name, 'ALL') }}</th>
-                            {%- for vote in form.party_mappings.values() -%}
-                            <th class="numeric gray">{{ dataframe|vote_proportion(form, form.party_mappings.values(), vote, location.location_type, location.name, 'ALL') }}%<br />({{ dataframe|vote_count(form.party_mappings.values(), vote, location.location_type, location.name, 'ALL') }})</th>
+                            <th class="numeric gray">{{ dataframe|valid_votes_total(party_codes, location.location_type, location.name, 'ALL') }}</th>
+                            {%- for vote in party_codes -%}
+                            <th class="numeric gray">{{ dataframe|vote_proportion(form, party_codes, vote, location.location_type, location.name, 'ALL') }}%<br />({{ dataframe|vote_count(party_codes, vote, location.location_type, location.name, 'ALL') }})</th>
                             {%- if form.calculate_moe -%}
-                            <th class="numeric gray">{{ dataframe|vote_moe(form, form.party_mappings.values(), vote, location.location_type, location.name, 'ALL') }}%</th>
-                            <th class="numeric gray">{{ dataframe|vote_moe(form, form.party_mappings.values(), vote, location.location_type, location.name, 'ALL', 258.0) }}%</th>
+                            <th class="numeric gray">{{ dataframe|vote_moe(form, party_codes, vote, location.location_type, location.name, 'ALL') }}%</th>
+                            <th class="numeric gray">{{ dataframe|vote_moe(form, party_codes, vote, location.location_type, location.name, 'ALL', 258.0) }}%</th>
                             {%- endif -%}
                             {%- endfor -%}
 						</tr>
 						{%- for sublocation in location_tree[lt.name] -%}
 						<tr>
 							<td class="gray" style="vertical-align:middle">{{ sublocation.name }} &middot; <span class="muted"><em>{{ sublocation.location_type }}</em></span></td>
-							<th class="numeric gray">{{ dataframe|reported_pct(form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }}% <br>({{ dataframe|reported(form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }})</th>
-							<th class="numeric gray">{{ dataframe|missing_pct(form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }}% <br>({{ dataframe|missing(form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }})</th>
+							<th class="numeric gray">{{ dataframe|reported_pct(party_codes, sublocation.location_type, sublocation.name, 'ALL') }}% <br>({{ dataframe|reported(party_codes, sublocation.location_type, sublocation.name, 'ALL') }})</th>
+							<th class="numeric gray">{{ dataframe|missing_pct(party_codes, sublocation.location_type, sublocation.name, 'ALL') }}% <br>({{ dataframe|missing(party_codes, sublocation.location_type, sublocation.name, 'ALL') }})</th>
 							{%- if form.registered_voters_tag -%}
 							<th class="numeric gray">{{ dataframe|total_registered(form, sublocation.location_type, sublocation.name, 'ALL') }}</th>
 							{%- endif -%}
-							<th class="numeric gray">{{ dataframe|all_votes_total_pct(form, form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }}% ({{ dataframe|all_votes_total(form, form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }})</th>
+							<th class="numeric gray">{{ dataframe|all_votes_total_pct(form, party_codes, sublocation.location_type, sublocation.name, 'ALL') }}% ({{ dataframe|all_votes_total(form, party_codes, sublocation.location_type, sublocation.name, 'ALL') }})</th>
 							{%- if form.registered_voters_tag and form.calculate_moe -%}
-							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }}%</th>
-							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL', 258.0) }}%</th>
+							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, party_codes, sublocation.location_type, sublocation.name, 'ALL') }}%</th>
+							<th class="numeric gray">{{ dataframe|all_votes_total_moe(form, party_codes, sublocation.location_type, sublocation.name, 'ALL', 258.0) }}%</th>
 							{%- endif -%}
 							<th class="numeric gray">{{ dataframe|rejected_proportion(form, sublocation.location_type, sublocation.name, 'ALL') }}%<br />({{ dataframe|rejected_count(form, sublocation.location_type, sublocation.name, 'ALL') }})</th>
                             {%- if form.calculate_moe -%}
                             <th class="numeric gray">{{ dataframe|rejected_moe(form, sublocation.location_type, sublocation.name, 'ALL') }}%</th>
                             <th class="numeric gray">{{ dataframe|rejected_moe(form, sublocation.location_type, sublocation.name, 'ALL', 258.0) }}%</th>
                             {%- endif -%}
-                            <th class="numeric gray">{{ dataframe|valid_votes_total(form.party_mappings.values(), sublocation.location_type, sublocation.name, 'ALL') }}</th>
-                            {%- for vote in form.party_mappings.values() -%}
-                            <th class="numeric gray">{{ dataframe|vote_proportion(form, form.party_mappings.values(), vote, sublocation.location_type, sublocation.name, 'ALL') }}%<br />({{ dataframe|vote_count(form.party_mappings.values(), vote, sublocation.location_type, sublocation.name, 'ALL') }})</th>
+                            <th class="numeric gray">{{ dataframe|valid_votes_total(party_codes, sublocation.location_type, sublocation.name, 'ALL') }}</th>
+                            {%- for vote in party_codes -%}
+                            <th class="numeric gray">{{ dataframe|vote_proportion(form, party_codes, vote, sublocation.location_type, sublocation.name, 'ALL') }}%<br />({{ dataframe|vote_count(party_codes, vote, sublocation.location_type, sublocation.name, 'ALL') }})</th>
                             {%- if form.calculate_moe -%}
-                            <th class="numeric gray">{{ dataframe|vote_moe(form, form.party_mappings.values(), vote, sublocation.location_type, sublocation.name, 'ALL') }}%</th>
-                            <th class="numeric gray">{{ dataframe|vote_moe(form, form.party_mappings.values(), vote, sublocation.location_type, sublocation.name, 'ALL', 258.0) }}%</th>
+                            <th class="numeric gray">{{ dataframe|vote_moe(form, party_codes, vote, sublocation.location_type, sublocation.name, 'ALL') }}%</th>
+                            <th class="numeric gray">{{ dataframe|vote_moe(form, party_codes, vote, sublocation.location_type, sublocation.name, 'ALL', 258.0) }}%</th>
                             {%- endif -%}
                             {%- endfor -%}
 						</tr>
