--- a/apollo/frontend/templates/frontend/submission_list.html
+++ b/apollo/frontend/templates/frontend/submission_list.html
@@ -42,7 +42,7 @@
 {% block content %}
 <div class="row">
   <div class="col-md-12">
-    {{ render_filter_form(form, filter_form) }}
+    {{ render_filter_form(form, filter_form, location) }}
   </div>
 </div>
 
