--- a/apollo/frontend/templates/frontend/dashboard.html
+++ b/apollo/frontend/templates/frontend/dashboard.html
@@ -34,7 +34,7 @@
 <div class="row">
   <div class="col-md-12">
       <div class="well well-sm filter">
-          {{ render_filter_form(filter_form)}}
+          {{ render_filter_form(filter_form, location)}}
       </div>
   </div>
 </div>
