--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -1,4 +1,4 @@
-{% macro render_filter_form(form) %}
+{% macro render_filter_form(form, location) %}
 <form class="form-inline">
 <div>
     <div class="form-group">
@@ -8,7 +8,7 @@
     {{ form.name(class_='form-control span3 input-sm', placeholder=_('Name')) }}
     </div>
     <div class="form-group">
-    {{ form.location(class_='select2-container span3 select2') }}
+    {{ form.location(class_='select2-container span3 select2 select2-locations', **{'data-name': location.name, 'data-location_type': location.location_type}) }}
     </div>
     <div class="form-group">
     {{ form.sample(class_='form-control span2 input-sm') }}
