--- a/apollo/frontend/templates/frontend/incident_add.html
+++ b/apollo/frontend/templates/frontend/incident_add.html
@@ -7,11 +7,11 @@
   <tbody>
     <tr>
       <td>{% trans %}Participant{% endtrans %}</td>
-      <td>{{ submission_form.contributor(class_='select2-container span4 input-xlarge select2') }}</td>
+      <td>{{ submission_form.contributor(class_='select2-container span4 input-xlarge select2 select2-observers') }}</td>
     </tr>
     <tr>
       <td>{% trans %}Location{% endtrans %}</td>
-      <td>{{ submission_form.location(class_='select2-container span4 input-xlarge select2') }}</td>
+      <td>{{ submission_form.location(class_='select2-container span4 input-xlarge select2 select2-locations') }}</td>
     </tr>
   </tbody>
 </table>
